add getReciprocalMe
