# src/controllers/likes.controller.ts
@@ -6,57 +6,6 @@ import {DoLikesRequest} from "../models/likesModel";
 @Route('/likes')
 export class LikesController extends Controller {
 
-    @Post("")
-    @Tags("Likes")
-    @Response<IResponse>('400', 'Bad Request')
-    @SuccessResponse<IResponse>('200', 'OK')
-    public async doLikeUser(@Body() body: DoLikesRequest): Promise<IResponse> {
-        try {
-            const likesService = new LikesService();
-            const likes = await likesService.doLike(body);
-            const response = {
-                message: "OK",
-                status: "200",
-                data: "Вы сделали свой выбор:)"
-            }
-            return response;
-        } catch (err) {
-            this.setStatus(400);
-            const response = {
-                message: "FAIL",
-                status: "400",
-                data: err
-            }
-            return response
-        }
-    }
-
-    @Get("{vk_id}")
-    @Tags("Likes")
-    // @Security("jwt")
-    @Response<IResponse>('400', 'Bad Request')
-    @SuccessResponse<IResponse>('200', 'OK')
-    public async getMyLikedUsers(@Path() vk_id: number): Promise<IResponse> {
-        try {
-            const likesService = new LikesService();
-            const likes = await likesService.getMyLikedUsers(vk_id);
-            const response = {
-                message: "OK",
-                status: "200",
-                data: likes
-            }
-            return response;
-        } catch (err) {
-            this.setStatus(400);
-            const response = {
-                message: "FAIL",
-                status: "400",
-                data: err.message
-            }
-            return response
-        }
-    }
-
     @Get("/to/{vk_id}")
     @Tags("Likes")
     // @Security("jwt")
@@ -92,6 +41,83 @@ export class LikesController extends Controller {
         try {
             const likesService = new LikesService();
             const likes = await likesService.getUserAcceptStatus(vk_id);
+            const response = {
+                message: "OK",
+                status: "200",
+                data: likes
+            }
+            return response;
+        } catch (err) {
+            this.setStatus(400);
+            const response = {
+                message: "FAIL",
+                status: "400",
+                data: err.message
+            }
+            return response
+        }
+    }
+
+    @Get("/reciprocal/{vk_id}")
+    @Tags("Likes")
+    // @Security("jwt")
+    @Response<IResponse>('400', 'Bad Request')
+    @SuccessResponse<IResponse>('200', 'OK')
+    public async getReciprocalMe(@Path() vk_id: number): Promise<IResponse> {
+        try {
+            const likesService = new LikesService();
+            const likes = await likesService.getReciprocalMe(vk_id);
+            const response = {
+                message: "OK",
+                status: "200",
+                data: likes
+            }
+            return response;
+        } catch (err) {
+            this.setStatus(400);
+            const response = {
+                message: "FAIL",
+                status: "400",
+                data: err.message
+            }
+            return response
+        }
+    }
+
+    @Post("")
+    @Tags("Likes")
+    @Response<IResponse>('400', 'Bad Request')
+    @SuccessResponse<IResponse>('200', 'OK')
+    public async doLikeUser(@Body() body: DoLikesRequest): Promise<IResponse> {
+        try {
+            const likesService = new LikesService();
+            const likes = await likesService.doLike(body);
+            const response = {
+                message: "OK",
+                status: "200",
+                data: "Вы сделали свой выбор:)"
+            }
+            return response;
+        } catch (err) {
+            this.setStatus(400);
+            const response = {
+                message: "FAIL",
+                status: "400",
+                data: err
+            }
+            return response
+        }
+    }
+
+    @Get("{vk_id}")
+    @Tags("Likes")
+    // @Security("jwt")
+    @Response<IResponse>('400', 'Bad Request')
+    @SuccessResponse<IResponse>('200', 'OK')
+    public async getMyLikedUsers(@Path() vk_id: number): Promise<IResponse> {
+        try {
+            const likesService = new LikesService();
+            const likes = await likesService.getMyLikedUsers(vk_id);
             const response = {
                 message: "OK",
                 status: "200",
